--- a/2018读书笔记.md
+++ b/2018读书笔记.md
@@ -3,8 +3,8 @@
 ### 书籍目录
 | 开始时间 | 结束时间 | 书名 | 进度 | 笔记 |
 | :---: |  :---: |  :---: |  :---: | :---|
-| 2018-01-26 | 2018-01-31| [吴军.数学之美.pdf](https://github.com/yorkLiu/books/blob/master/%E5%90%B4%E5%86%9B.%E6%95%B0%E5%AD%A6%E4%B9%8B%E7%BE%8E.pdf)| 已完成 | [](#吴军.数学之美 读后感)
-| 2018-02-06| 2018-02-12 | [人工智能 - 李开复.pdf](https://github.com/yorkLiu/books/blob/master/%E4%BA%BA%E5%B7%A5%E6%99%BA%E8%83%BD%20-%20%E6%9D%8E%E5%BC%80%E5%A4%8D.pdf) | 已完成| [人工智能 - 李开复 读后感](#人工智能 - 李开复 读后感)|
+| 2018-01-26 | 2018-01-31| [吴军.数学之美.pdf](https://github.com/yorkLiu/books/blob/master/%E5%90%B4%E5%86%9B.%E6%95%B0%E5%AD%A6%E4%B9%8B%E7%BE%8E.pdf)| 已完成 | [吴军.数学之美读后感](#吴军.数学之美读后感)
+| 2018-02-06| 2018-02-12 | [人工智能 - 李开复.pdf](https://github.com/yorkLiu/books/blob/master/%E4%BA%BA%E5%B7%A5%E6%99%BA%E8%83%BD%20-%20%E6%9D%8E%E5%BC%80%E5%A4%8D.pdf) | 已完成| [人工智能 - 李开复 读后感](#人工智能-李开复读后感)|
 | 2018-02-07 | ...  | [机器学习导论.pdf](https://github.com/yorkLiu/books/blob/master/%E6%9C%BA%E5%99%A8%E5%AD%A6%E4%B9%A0%E5%AF%BC%E8%AE%BA.pdf)| In Progress | ..|
 
 
@@ -12,7 +12,7 @@
 
 
 
-### 吴军.数学之美 读后感
+### 吴军.数学之美读后感
 这本书对初入 `机器学习`的人来说是一本非常好的Cook Book, 主要介绍了`机器学习`中一些算法如何用数学来解决，或者更正确的说是将数学中的方法论合理的运用到`机器学习`中，以此来达到解决问题的目的。诸如:
 * TF-IDF, 隐马模型 (语音，文字识别) 都可以转换为两个向量求 `夹角`的问题，进而可以用 `余玄函数`来解决
 * 再如 `语音识别`，`机器翻译` 则可以用统计学的知识来提高准确率
@@ -22,7 +22,7 @@
 于本人而言，其实这本书带给我最大的感触是 『计算机中或者计器学习中 都是以数据学为基础的』，这就不难解释为何 `机器学习`对数学的要求要比传统编程要高了！
 
 
-### 人工智能 - 李开复 读后感
+### 人工智能-李开复读后感
 李开复写的这本《人工智能》应该说是一本对人工智能的大体介绍，主要包括以下几方面：
 * 人工智能的发展史
   - 本书也说到，其实`人工智能` 并不是一个新词，早上20世纪90年代或者更早就有这方面的研究了，比如以早期 `智能语音识别`（或者说是专家系统）为代表的"所谓的人工智能"，以后在2006以后以 『深蓝』为代表的`人工智能`，再到现在以 `AlphaGo`为代表的基于 `深度学习`的人工智能。可以说 `人工智能`已经被科学家研究了很长的时间了！
