--- a/机器学习实战Peter著-笔记/1.机器学习基础.md
+++ b/机器学习实战Peter著-笔记/1.机器学习基础.md
@@ -32,3 +32,12 @@
 
 如果不想预测目标变量的值，则可以选择无监督算法。进一步分析是否要将数据划分为离散的组。如果这是唯一的需求，则全用聚类虎法；如果还需要估计数据与每个分组的相似程度，则需要使用密度估计算法。
 ```
+
+## 开发计算学习应用程序的步骤
+* 1. 收集数据
+* 2. 清洗数据
+* 3. 准备输入数据
+* 4. 分析输入数据
+* 5. 训练算法
+* 6. 测试算法 (预测)
+* 7. 使用算法
