--- a/机器学习实战Peter著-笔记/Code/kNN.ipynb
+++ b/机器学习实战Peter著-笔记/Code/kNN.ipynb
@@ -12,6 +12,12 @@
     "* 缺点: 计算复杂度高，空间复杂度高\n",
     "* 适用数据范围: 数值型和标称型\n",
     "\n",
+    "### **Note:** `LaTex`数学公式语法请参见: \n",
+    "* http://blog.csdn.net/GarfieldEr007/article/details/51646604\n",
+    "* http://blog.csdn.net/u012501459/article/details/49617805\n",
+    "* http://blog.csdn.net/qq_39232265/article/details/78868487\n",
+    "* 在线生成 LaTex工具: http://latex.codecogs.com/eqneditor/editor.php\n",
+    "\n",
     "## 距离计算公式\n",
     "* 1.欧氏距离公式, 计算两个向量点 xA和xB之间的距离\n",
     "    * $$\\begin{align}d = \\sqrt{(xA_0 - xB_0)^{2} + (xA_1 - xB_1)^{2}}\\end{align}$$\n",
