--- a/机器学习实战Peter著-笔记/Code/kNN.ipynb
+++ b/机器学习实战Peter著-笔记/Code/kNN.ipynb
@@ -19,13 +19,25 @@
     "* 在线生成 LaTex工具: http://latex.codecogs.com/eqneditor/editor.php\n",
     "\n",
     "## 距离计算公式\n",
-    "* 1.欧氏距离公式, 计算两个向量点 xA和xB之间的距离\n",
-    "    * $$\\begin{align}d = \\sqrt{(xA_0 - xB_0)^{2} + (xA_1 - xB_1)^{2}}\\end{align}$$\n",
-    "    * I.E: 点 （0,0）与 (1,2)之间的距离为:\n",
-    "       * $$\\sqrt{(1-0)^{2} + (2-0)^{2}}$$\n",
-    "    * 点(1,0,0,1) 与 (7,6,9,4)之间的距离为:\n",
-    "       * $$ \\sqrt{(7-1)^{2} - (6-0)^{2} - (9-0)^{2} - (4-1)^{2}} $$\n",
-    "* 2.\n"
+    "* 1.欧氏距离公式\n",
+    "> 欧氏距离是最易于理解的一种距离计算方法，源自欧氏空间中两点间的距离公式\n",
+    "> 计算两个向量点 xA和xB之间的距离,数学公式为:\n",
+    "> $$d = \\sqrt{(xA_0 - xB_0)^{2} + (xA_1 - xB_1)^{2}}$$\n",
+    "  * I.E: 点 （0,0）与 (1,2)之间的距离为:\n",
+    "  $$\\sqrt{(1-0)^{2} + (2-0)^{2}}$$\n",
+    "  * 点(1,0,0,1) 与 (7,6,9,4)之间的距离为:\n",
+    "  $$ \\sqrt{(7-1)^{2} - (6-0)^{2} - (9-0)^{2} - (4-1)^{2}} $$\n",
+    "  \n",
+    "* 2.曼哈顿距离\n",
+    "> 从名字就可以猜出这种距离的计算方法了。想象你在曼哈顿要从一个十字路口开车到另外一个十字路口，驾驶距离是两点间的直线距离吗？显然不是，除非你能穿越大楼。实际驾驶距离就是这个“曼哈顿距离”。而这也是曼哈顿距离名称的来源， 曼哈顿距离也称为 **城市街区距离(City Block distance)**。\n",
+    "> 1. 二维平面两点a(x1,y1)与b(x2,y2)间的曼哈顿距离\n",
+    "> $$d12= |x_1 - x_2| + |y_1 - y_2|$$\n",
+    "> 2. 两个n维向量a(x11,x12,…,x1n)与 b(x21,x22,…,x2n)间的曼哈顿距离\n",
+    "> $$d12 = \\sum_{i}^{n} |x_1k - x_2k|$$\n",
+    "* 3.信息熵\n",
+    "  > 信息熵是衡量分布的混乱程度或分散程度的一种度量。分布越分散(或者说分布越平均)，信息熵就越大。分布越有序（或者说分布越集中），信息熵就越小。\n",
+    "  > 计算给定的样本集X的信息熵的公式：\n",
+    "  > $$Entropy(X) = \\sum_{i}^{n}-p_ilog_2p_i$$\n"
    ]
   },
   {
