--- a/机器学习实战Peter著-笔记/Code/kNN.ipynb
+++ b/机器学习实战Peter著-笔记/Code/kNN.ipynb
@@ -791,8 +791,17 @@
     "实际使用 `KNN`对手写数字识别时，算法的执行效率并不高。国为算法需要为每个测试向量做大约2000次距离的计算,每个距离计算包括了1024个维度的浮点运算，总计要执行 900次，此外，我们还需要为测试向量准备2MB的存储空间。\n",
     "\n",
     "\n",
-    "是否存在一种算法减少存储空间和计算时间的开销呢？`k决策树`就是`k-近邻`"
+    "是否存在一种算法减少存储空间和计算时间的开销呢？`k决策树`就是`k-近邻`算法的优化版, 可以节省大量的计算开销!"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
