--- a/2018读书笔记.md
+++ b/2018读书笔记.md
@@ -6,7 +6,7 @@
 | 2018-01-26 | 2018-01-31| [吴军.数学之美.pdf](https://github.com/yorkLiu/books/blob/master/%E5%90%B4%E5%86%9B.%E6%95%B0%E5%AD%A6%E4%B9%8B%E7%BE%8E.pdf)| 已完成 | [吴军.数学之美读后感](#吴军.数学之美读后感)|
 | 2018-02-06| 2018-02-12 | [人工智能 - 李开复.pdf](https://github.com/yorkLiu/books/blob/master/%E4%BA%BA%E5%B7%A5%E6%99%BA%E8%83%BD%20-%20%E6%9D%8E%E5%BC%80%E5%A4%8D.pdf) | 已完成| [人工智能 - 李开复 读后感](#人工智能-李开复读后感)|
 | 2018-02-07 | ...  | [机器学习导论.pdf](https://github.com/yorkLiu/books/blob/master/%E6%9C%BA%E5%99%A8%E5%AD%A6%E4%B9%A0%E5%AF%BC%E8%AE%BA.pdf)| In Progress | ..|
-|2018-02-26| ...| | [机器学习实战(Peter Harrington 著)](https://github.com/yorkLiu/books/blob/master/%E6%9C%BA%E5%99%A8%E5%AD%A6%E4%B9%A0%E5%AE%9E%E6%88%98(Peter%20Harrington%20%E8%91%97%2C%E5%8D%95%E9%A1%B5).pdf) | In Progress|[机器学习实战Peter著 笔记](机器学习实战Peter著-笔记/README.md) |
+|2018-02-26| ...| [机器学习实战(Peter Harrington 著)](https://github.com/yorkLiu/books/blob/master/%E6%9C%BA%E5%99%A8%E5%AD%A6%E4%B9%A0%E5%AE%9E%E6%88%98(Peter%20Harrington%20%E8%91%97%2C%E5%8D%95%E9%A1%B5).pdf) | In Progress|[机器学习实战Peter著 笔记](机器学习实战Peter著-笔记/README.md) |
 
 
 
